--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "split-type": "^0.3.4",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.178.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
-    "vite-plugin-glsl": "^1.5.1"
+    "vite-plugin-glsl": "^1.5.1",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
